Added css-file and making the start for the -html -file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Let's start
+Let's start this site!
+<link href='style.css' type="text/css" rel="stylesheet" >
+<h1>Personal home page</h1>
+
+<p>Vanhan sanonnan mukaan "tekemistä vaille valmista"...</p>
