Start for the website with some specific information

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-Let's start this site!
 <link href='style.css' type="text/css" rel="stylesheet" >
-<h1>Personal home page</h1>
+<body>
+    <h1>Lassi Laitinen</h1>
 
-<p>Vanhan sanonnan mukaan "tekemistä vaille valmista"...</p>
+    <h3>Linkkejä:</h3>
+    <p>
+        LinkedIn: <a href="https://www.linkedin.com/in/lassi-laitinen-/"> linkedin.com/in/lassi-laitinen-/</a>    
+    </p>
+    <p>
+        GitHub: <a href="https://github.com/lassilaitinen"> github.com/lassilaitinen</a>    
+    </p>
+</body>
