Minor update to text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="info">
         <h2>Minä</h2>
         <p>
-            Olen neljättä opiskeluvuotta Jyväskylän yliopistossa aloittava tieto- ja ohjelmistotekniikan opiskelija. Opiskelut aloitin syksyllä 2021 ja valmistuin 
+            Olen neljännen opiskeluvuoden Jyväskylän yliopistossa aloittanut tieto- ja ohjelmistotekniikan opiskelija. Opiskelut aloitin syksyllä 2021 ja valmistuin 
             tekniikan kandidaatiksi alkukesästä 2024. Sivuaineena opiskelin kandivaiheessa liiketoimintaa. Nyt syksyllä 2024 aloitan opiskelun tieto- ja ohjelmistotekniikan
             DI-ohjelmassa. <br>
         
@@ -60,7 +60,7 @@
             
         </p>
         <p>
-            <br><br>Viimeksi päivitetty: 14.8.2024
+            <br><br>Viimeksi päivitetty: 4.9.2024
         </p>
     </div>
 </body>
