--- a/projects/projects.html
+++ b/projects/projects.html
@@ -29,6 +29,7 @@
                 MOOC Cyber Security Base -kurssin projekti. Tavoitteena oli luoda sovellus pienin tietoturvahaavoittuvuksin sekä kirjoittaa
                 ohjeet, kuinka haavoittuvuudet voidaan korjata. Sovelluksessa voi kirjauduttuaan sisään lisätä havaittuja tietoturvariskejä sekä 
                 kommentoida muiden käyttäjien lisäämiä huomioita ja havaintoja.
+                <br> Linkki: <a href="https://github.com/lassilaitinen/CSB-project1">Projekti GitHubissa </a>
             </p>
 
             <h3>Kandidaatintutkielma</h3>
@@ -44,7 +45,10 @@
             </p>
 
             <h3>Havaintopäiväkirja</h3>
-            <p>Ohjelmointi 2 -kurssin harjoitustyö, jossa sain ensimmäisen kosketuksen Javaan. </p>
+            <p>
+                Ohjelmointi 2 -kurssin harjoitustyö, jossa sain ensimmäisen kosketuksen Javaan. 
+                <br> Linkki: <a href="https://github.com/lassilaitinen/Havaintopaivakirja">Projekti GitHubissa </a>
+            </p>
 
             <h3>Webjulkaisemisen harjoitustyö</h3>
             <p>
@@ -53,7 +57,10 @@
             </p>
 
             <h3>Seikkailija -peli</h3>
-            <p>Ohjelmointi 1 -kurssin harjoitustyö, joka oli samalla ensimmäinen ohjelmointiprojektini. </p>
+            <p>
+                Ohjelmointi 1 -kurssin harjoitustyö, joka oli samalla ensimmäinen ohjelmointiprojektini. 
+                <br> Linkki: <a href="https://github.com/lassilaitinen/Seikkailija-peli">Projekti GitHubissa </a>
+            </p>
         </div>
     </body>
 </html>
