--- a/projects/projects.html
+++ b/projects/projects.html
@@ -7,23 +7,27 @@
     <link href='../style.css' type="text/css" rel="stylesheet" >
     <body>
         <nav class="nav">
+            <div class="header">
+                <h1>Lassi Laitinen</h1>
+            </div>
             <div><a href="https://lassilaitinen.github.io/"> Etusivu </a></div>
             <div><a href="https://lassilaitinen.github.io/projects/projects.html"> Projekteja </a></div>
         </nav>
-        <div class="header">
-            <h1>Tehtyjä projekteja</h1>
-        </div>
 
-        <div class="links">
-            <h3>Linkkejä:</h3>
-            <p>
-                LinkedIn: <a href="https://www.linkedin.com/in/lassi-laitinen-/"> linkedin.com/in/lassi-laitinen-/</a>    
-            </p>
-            <p>
-                GitHub: <a href="https://github.com/lassilaitinen"> github.com/lassilaitinen</a>    
-            </p>
+        <div class="side">
+            <img src="https://media.licdn.com/dms/image/v2/D4D03AQG523eCHzZOZw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675182561681?e=1733961600&v=beta&t=r_7JkLnihG4MrSlq08kGH2V4mvUPetavgz-lyLYxudc">
+            <div class="links">
+                <h3>Linkkejä:</h3>
+                <p>
+                    LinkedIn: <a href="https://www.linkedin.com/in/lassi-laitinen-/"> linkedin.com/in/lassi-laitinen-/</a>    
+                </p>
+                <p>
+                    GitHub: <a href="https://github.com/lassilaitinen"> github.com/lassilaitinen</a>    
+                </p>
+            </div>
         </div>
-        <div class="info">
+        <div class="content">
+            <h1>Tehtyjä projekteja</h1>
             <h3>SecureApp</h3>
             <p>
                 MOOC Cyber Security Base -kurssin projekti. Tavoitteena oli luoda sovellus pienin tietoturvahaavoittuvuksin sekä kirjoittaa
