--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <link href='style.css' type="text/css" rel="stylesheet" >
     <body>
         <nav class="nav">
+            <div class="header">
+                <h1>Lassi Laitinen</h1>
+            </div>
             <div><a href="https://lassilaitinen.github.io/"> Etusivu </a></div>
             <div><a href="https://lassilaitinen.github.io/projects/projects.html"> Projekteja </a></div>
         </nav>
-        <div class="header">
-            <h1>Lassi Laitinen</h1>
+        <div class="side">
+            <img src="https://media.licdn.com/dms/image/v2/D4D03AQG523eCHzZOZw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675182561681?e=1733961600&v=beta&t=r_7JkLnihG4MrSlq08kGH2V4mvUPetavgz-lyLYxudc">
+            <div class="links">
+                <h3>Linkkejä:</h3>
+                <p>
+                    LinkedIn: <a href="https://www.linkedin.com/in/lassi-laitinen-/"> linkedin.com/in/lassi-laitinen-/</a>    
+                </p>
+                <p>
+                    GitHub: <a href="https://github.com/lassilaitinen"> github.com/lassilaitinen</a>    
+                </p>
+            </div>
         </div>
-
-        <div class="links">
-            <h3>Linkkejä:</h3>
-            <p>
-                LinkedIn: <a href="https://www.linkedin.com/in/lassi-laitinen-/"> linkedin.com/in/lassi-laitinen-/</a>    
-            </p>
-            <p>
-                GitHub: <a href="https://github.com/lassilaitinen"> github.com/lassilaitinen</a>    
-            </p>
-        </div>
-        <div class="info">
+        <div class="content">
             <h2>Minä</h2>
             <p>
                 Olen neljännen opiskeluvuoden Jyväskylän yliopistossa aloittanut tieto- ja ohjelmistotekniikan opiskelija. Opiskelut aloitin syksyllä 2021 ja valmistuin 
-                tekniikan kandidaatiksi alkukesästä 2024. Sivuaineena opiskelin kandivaiheessa liiketoimintaa. Nyt syksyllä 2024 aloitan opiskelun tieto- ja ohjelmistotekniikan
+                tekniikan kandidaatiksi alkukesästä 2024. Sivuaineena opiskelin kandivaiheessa liiketoimintaa. Syksyllä 2024 aloitin opiskelun tieto- ja ohjelmistotekniikan
                 DI-ohjelmassa. <br>
             
                 <br>Kiinnostukseni kohteet IT-alalla liittyvät digitalisaatioon ja digitaalisten järjestelmien turvallisuuteen. Yleisesti myös teknologian hyödyntäminen
