--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 In English</button></div>
         </nav>
         <div class="side">
-            <img src="https://media.licdn.com/dms/image/v2/D4D03AQG523eCHzZOZw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675182561681?e=1733961600&v=beta&t=r_7JkLnihG4MrSlq08kGH2V4mvUPetavgz-lyLYxudc">
+            <img src="photos/me.jpg">
             <div class="links">
                 <h3 id="links">Linkkejä:</h3>
                 <p>
